[package]
name = "tracing-ndjson"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Cole Mackenzie"]
repository = "https://github.com/cmackenzie1/tracing-ndjson"
description = "A customizable ndjson formatter for outputting tracing events"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.49"
tracing-core = "0.1.31"
tracing-serde = "0.1.3"
tracing-subscriber = "0.3.17"

[dev-dependencies]
tracing = "0.1.37"
