[package]
name = "tracing-ndjson"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Cole Mackenzie"]
repository = "https://github.com/cmackenzie1/tracing-ndjson"
description = "A customizable ndjson formatter for outputting tracing events"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde = "1"
serde_json = "1"
thiserror = "1"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tracing = "0.1.40"
