[package]
name = "tracing-ndjson"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Cole Mackenzie"]
repository = "https://github.com/cmackenzie1/tracing-ndjson"
description = "A customizable ndjson formatter for outputting tracing events"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1"
serde_json = "1"
tracing-core = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tracing = "0.1"
